website: added release notes for 1.3.0. Fixed dates for 1.2.1.

--- a/packages/website/src/pages/releases/vue/vue-releases.njk
+++ b/packages/website/src/pages/releases/vue/vue-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos vue releases, vue release hub"
 
   <ol>
     <li>
+      <a href="/releases/vue/1.3.0/" class="font-mono">1.3.0 - 2023-09-08</a>
+    </li>
+    <li>
       <a href="/releases/vue/1.2.1/" class="font-mono">1.2.1 - 2023-06-27</a>
     </li>
     <li>
