--- a/packages/website/src/pages/releases/angular/1.3.0.njk
+++ b/packages/website/src/pages/releases/angular/1.3.0.njk
@@ -1,10 +1,10 @@
 ---
-title: '1.2.1 | @uiloos/angular | Releases'
+title: '1.3.0 | @uiloos/angular | Releases'
 layout: layouts/base.njk
-permalink: /releases/angular/1.2.1/
+permalink: /releases/angular/1.3.0/
 stickyNavigation: false
-description: "Release notes of @uiloos/angular 1.2.1"
-keywords: "release notes @uiloos/angular 1.2.1, changelog @uiloos/angular 1.2.1"
+description: "Release notes of @uiloos/angular 1.3.0"
+keywords: "release notes @uiloos/angular 1.3.0, changelog @uiloos/angular 1.3.0"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 my-8">
@@ -25,13 +25,19 @@ keywords: "release notes @uiloos/angular 1.2.1, changelog @uiloos/angular 1.2.1"
   </a>
 
   <!-- Title -->
-  <h1>@uiloos/angular 1.2.1</h1>
+  <h1>@uiloos/angular 1.3.0</h1>
 
-  <p>Released on <span class="font-mono">2023-06-27</span></p>
+  <p>Released on <span class="font-mono">2023-07-05</span></p>
+
+  <p>
+    This release makes fixes a bug causing the exposed <a class="high underline" href="/api/angular/uiloosmodule"/>UiloosModule</a>
+    not to work as expected, due to a missing dependency on Angulars 
+    BrowserModule.
+  </p>
 
   <p>
     This release makes <span class="high">@uiloos/angular</span> depend on
     <span class="high">@uiloos/core</span> version
-    <a href="/releases/core/1.2.1/" class="high underline">1.2.1</a>.
+    <a href="/releases/core/1.3.0/" class="high underline">1.3.0</a>.
   </p>
 </section>
