--- a/packages/website/src/pages/releases/vue/1.3.0.njk
+++ b/packages/website/src/pages/releases/vue/1.3.0.njk
@@ -1,16 +1,16 @@
 ---
-title: '1.2.1 | @uiloos/angular | Releases'
+title: '1.3.0 | @uiloos/vue | Releases'
 layout: layouts/base.njk
-permalink: /releases/angular/1.2.1/
+permalink: /releases/vue/1.3.0/
 stickyNavigation: false
-description: "Release notes of @uiloos/angular 1.2.1"
-keywords: "release notes @uiloos/angular 1.2.1, changelog @uiloos/angular 1.2.1"
+description: "Release notes of @uiloos/vue 1.3.0"
+keywords: "release notes @uiloos/vue 1.3.0, changelog @uiloos/vue 1.3.0"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 my-8">
   <a
     class="inline-flex items-center text-base text-purple-600 hover:underline mb-4"
-    href="/releases/angular/"
+    href="/releases/vue/"
   >
     <svg
       class="w-3 h-3 fill-current text-purple-400 shrink-0 mr-2"
@@ -21,17 +21,17 @@ keywords: "release notes @uiloos/angular 1.2.1, changelog @uiloos/angular 1.2.1"
         d="M.293 5.282L5 .5l1.414 1.436-3 3.048H12v2.032H3.414l3 3.048L5 11.5.293 6.718a1.027 1.027 0 010-1.436z"
       />
     </svg>
-    @uiloos/angular releases
+    @uiloos/vue releases
   </a>
 
   <!-- Title -->
-  <h1>@uiloos/angular 1.2.1</h1>
+  <h1>@uiloos/vue 1.3.0</h1>
 
-  <p>Released on <span class="font-mono">2023-06-27</span></p>
+  <p>Released on <span class="font-mono">2023-07-05</span></p>
 
   <p>
-    This release makes <span class="high">@uiloos/angular</span> depend on
+    This release makes <span class="high">@uiloos/vue</span> depend on
     <span class="high">@uiloos/core</span> version
-    <a href="/releases/core/1.2.1/" class="high underline">1.2.1</a>.
+    <a href="/releases/core/1.3.0/" class="high underline">1.3.0</a>.
   </p>
 </section>
