--- a/packages/website/src/pages/docs/active-list/concepts/accordion/accordion.njk
+++ b/packages/website/src/pages/docs/active-list/concepts/accordion/accordion.njk
@@ -3,8 +3,8 @@
 </strong>
 
 <p>
- An accordion component from which the user can open multiple
- items at once.
+ An accordion component from which the user can open one item at a 
+ time.
 </p>
 
 <style>
