website: changed typescript wording

--- a/packages/website/src/pages/docs/miscellaneous/typescript.njk
+++ b/packages/website/src/pages/docs/miscellaneous/typescript.njk
@@ -12,9 +12,9 @@ keywords: "uiloos typescript, uiloos typescript support"
  <h1>TypeScript</h1>
 
   <p>
-    All components provided by uiloos are JavaScript classes written
-    using TypeScript. "uiloos" exposes all TypeScript definitions so
-    TypeScript is fully supported.
+    All components provided by uiloos are written using TypeScript. 
+    "uiloos" exposes all TypeScript definitions so TypeScript is 
+    fully supported.
   </p>
 
   <p>
@@ -23,7 +23,7 @@ keywords: "uiloos typescript, uiloos typescript support"
   </p>
 
   <p>
-    uiloos does not required you to use use TypeScript, but it does 
-    make your life easier. 
+    <strong>uiloos does not require you to use use TypeScript. You can write 
+    regular JavaScript as well.<strong>
   </p>
 </article>
