website: ActiveList concept added gallery lightbox example

--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -61,6 +61,7 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
   {% include './concepts/accordion/accordion.njk' %}
   {% include './concepts/carousel/carousel.njk' %}
   {% include './concepts/sortable/sortable.njk' %}
+  {% include './concepts/gallery/gallery.njk' %}
 
   <p>
     All of these UI elements share one thing in common: there is 
